@@ -2,6 +2,8 @@
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Implemented feature #14400: Add shortcut to set background color
+- Fixed #14651: Handle floor() floating point inaccuracies in numneric axis
+  step evaluation
 
 
 1.4.1 - Monday 09 February 2009
